--- a/Audio-Processor/Dockerfile
+++ b/Audio-Processor/Dockerfile
@@ -3,5 +3,6 @@ ENV APP_HOME /app
 WORKDIR $APP_HOME
 COPY . ./
 RUN pip install pipenv
+RUN pip install --upgrade ibm-watson
 RUN pipenv install --deploy --system
-CMD exec gunicorn --bind :$PORT --workers 1 --worker-class uvicorn.workers.UvicornWorker  --threads 8 app.main:app
+CMD exec gunicorn --bind :5000 --workers 1 --worker-class uvicorn.workers.UvicornWorker  --threads 8 app.main:app
