--- a/Engine/Dockerfile
+++ b/Engine/Dockerfile
@@ -4,6 +4,8 @@ WORKDIR $APP_HOME
 COPY . ./
 RUN pip install pipenv
 RUN pip install spacy
+RUN pip install requests
 RUN python -m spacy download en_core_web_sm
 RUN pipenv install --deploy --system
-CMD exec gunicorn --bind :5000 --workers 1 --worker-class uvicorn.workers.UvicornWorker  --threads 8 app.main:app
+ENTRYPOINT ["uvicorn"]
+CMD ["app.main:app","--reload","--port","5000","--host","0.0.0.0"]
